--- a/index.html
+++ b/index.html
@@ -19,8 +19,19 @@
     <!-- Loading Screen -->
     <div id="loading-screen">
         <div class="loading-content">
-            <div class="loading-spinner"></div>
-            <div class="loading-text">KoyunFood wird geladen...</div>
+            <div class="loading-logo">KoyunFood</div>
+            <div class="food-loader">
+                <div class="food-item"></div>
+                <div class="food-item"></div>
+                <div class="food-item"></div>
+                <div class="food-item"></div>
+                <div class="food-item"></div>
+                <div class="food-item"></div>
+            </div>
+            <div class="loading-text">KoyunFood wird zubereitet</div>
+            <div class="loading-bar">
+                <div class="loading-progress"></div>
+            </div>
         </div>
     </div>
 
