Remove contact details and social links section

--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
                 <div class="contact-info">
                     <h3>Ihr Großhandelspartner</h3>
                     <p><i class="fas fa-map-marker-alt"></i> Gartenstraße 3, 78054 Schwenningen</p>
-                    <p><i class="fas fa-phone"></i> +49 1523 7211123 KI Support</p>
-                    <p><i class="fas fa-fax"></i> +49 7720 31211</p>
+                    <p><i class="fas fa-phone"></i> +49 1523 7211123  Bestell Support</p>
+                    <p><i class="fas fa-fax"></i> +49 7720 31211 Hauptnummer</p>
                     <p><i class="fas fa-envelope"></i> koyunfood@hotmail.com</p>
                     
                     <h3>Lagerzeiten</h3>
@@ -232,11 +232,6 @@
                     <a href="datenschutz.html">Datenschutz</a>
                     <a href="impressum.html">Impressum</a>
                 </div>
-                <div class="social-links">
-                    <a href="#"><i class="fab fa-facebook"></i></a>
-                    <a href="#"><i class="fab fa-instagram"></i></a>
-                    <a href="#"><i class="fab fa-tripadvisor"></i></a>
-                </div>
                 <p>&copy; 2025 KoyunFood. Alle Rechte vorbehalten.</p>
             </div>
         </div>
@@ -250,21 +245,6 @@
         </div>
     </div>
 
-    <!-- Google Reviews Section -->
-    <section id="bewertungen" class="reviews-section">
-        <div class="container">
-            <h2>Das sagen unsere Gäste</h2>
-            <div class="reviews-container">
-                <!-- Reviews will be loaded by JavaScript -->
-                <div id="google-reviews"></div>
-                <div class="google-review-link">
-                    <a href="#" target="_blank" class="btn google-btn">
-                        <i class="fab fa-google"></i> Bei Google bewerten
-                    </a>
-                </div>
-            </div>
-        </div>
-    </section>
 
     <!-- Snow Toggle Button -->
     <button id="snowToggle" class="snow-toggle">
@@ -275,6 +255,5 @@
     <!-- Scripts -->
     <script src="snow.js"></script>
     <script src="script.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_GOOGLE_API_KEY&libraries=places"></script>
 </body>
 </html>
