Add company history section to index.html
Added history section for Koyun Food with details about its founding and evolution.

--- a/index.html
+++ b/index.html
@@ -115,16 +115,31 @@
         <div class="container">
             <div class="about-content">
                 <div class="about-text">
-                    <h2>Über KoyunFood</h2>
-                    <p>Seit unserer Gründung haben wir uns bei KoyunFood auf den Großhandel mit hochwertigen türkischen Lebensmitteln spezialisiert. Unser Unternehmen steht für Frische, Qualität und Zuverlässigkeit – Werte, die uns zu einem geschätzten Partner für Gastronomiebetriebe, Einzelhändler und Großverbraucher in ganz Deutschland gemacht haben.</p>
-                    <p>Unser Sortiment umfasst eine sorgfältig ausgewählte Palette an türkischen Spezialitäten, die wir direkt von vertrauenswürdigen Herstellern und Lieferanten beziehen. Durch langjährige Partnerschaften können wir Ihnen stets frische Ware zu wettbewerbsfähigen Preisen anbieten.</p>
-                    <p>Unser erfahrenes Team steht Ihnen gerne mit kompetenter Beratung zur Seite und unterstützt Sie bei der Zusammenstellung Ihrer individuellen Bestellung. Wir verstehen die Bedürfnisse unserer Geschäftskunden und bieten maßgeschneiderte Lösungen für Ihren Betrieb.</p>
-                    <ul style="margin-top: 20px; list-style-type: none; padding-left: 0;">
-                        <li><i class="fas fa-check" style="color: var(--primary-color); margin-right: 10px;"></i> Großhandelspreise ab Lager</li>
-                        <li><i class="fas fa-check" style="color: var(--primary-color); margin-right: 10px;"></i> Regelmäßige Lieferungen</li>
-                        <li><i class="fas fa-check" style="color: var(--primary-color); margin-right: 10px;"></i> Persönliche Beratung</li>
-                        <li><i class="fas fa-check" style="color: var(--primary-color); margin-right: 10px;"></i> Zuverlässiger Service</li>
-                    </ul>
+                    <h2>Die Geschichte von Koyun Food</h2>
+                    <p>Im Jahr 1978 legte Riza Koyun den Grundstein für das, was heute als Koyun Food bekannt ist. Mit viel Fleiß, Verlässlichkeit und einem klaren Fokus auf frisches Obst und Gemüse begann eine Erfolgsgeschichte, die über Jahrzehnte hinweg wuchs.
+
+Was einst klein startete, entwickelte sich Schritt für Schritt weiter. Aus dem ursprünglichen Handel mit Obst und Gemüse entstand ein vielseitiges Sortiment: Heute beliefert Koyun Food seine Kunden nicht nur mit frischen Produkten, sondern auch mit Fleisch- und Wurstwaren, Tiefkühlprodukten sowie Verpackungsmaterialien. Ergänzt wurde das Angebot durch einen spezialisierten Großhandel für Gastronomiebetriebe – immer mit dem Anspruch, Qualität, Frische und Service zu vereinen.
+
+Heute wird das Unternehmen von der nächsten Generation geführt: Coskun Koyun setzt die Werte und Visionen des Gründers fort und verbindet Tradition mit modernen Anforderungen des Marktes. Koyun Food steht damit für über vier Jahrzehnte Erfahrung, familiäre Kontinuität und partnerschaftliche Zusammenarbeit – gestern, heute und in Zukunft.</p>
+                    
+                    <div class="checkmark-container" style="margin-top: 20px; display: flex; flex-wrap: wrap; gap: 15px;">
+                        <div class="checkmark-item" style="display: flex; align-items: center; white-space: nowrap;">
+                            <i class="fas fa-check" style="color: var(--primary-color); margin-right: 5px;"></i>
+                            <span>Großhandelspreise</span>
+                        </div>
+                        <div class="checkmark-item" style="display: flex; align-items: center; white-space: nowrap;">
+                            <i class="fas fa-check" style="color: var(--primary-color); margin-right: 5px;"></i>
+                            <span>Regelmäßige Lieferungen</span>
+                        </div>
+                        <div class="checkmark-item" style="display: flex; align-items: center; white-space: nowrap;">
+                            <i class="fas fa-check" style="color: var(--primary-color); margin-right: 5px;"></i>
+                            <span>Persönliche Beratung</span>
+                        </div>
+                        <div class="checkmark-item" style="display: flex; align-items: center; white-space: nowrap;">
+                            <i class="fas fa-check" style="color: var(--primary-color); margin-right: 5px;"></i>
+                            <span>Zuverlässiger Service</span>
+                        </div>
+                    </div>
                 </div>
                 <div class="about-image">
                     <img src="https://images.unsplash.com/photo-1445116572660-236099ec97a0?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=80" alt="Großhandel für türkische Lebensmittel">
