Update phone support description in index.html

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ Heute wird das Unternehmen von der nächsten Generation geführt: Coskun Koyun s
                 <div class="contact-info">
                     <h3>Ihr Großhandelspartner</h3>
                     <p><i class="fas fa-map-marker-alt"></i> Gartenstraße 3, 78054 Schwenningen</p>
-                    <p><i class="fas fa-phone"></i> +49 1523 7211123  Bestell Support</p>
+                    <p><i class="fas fa-phone"></i> +49 1523 7211123  Website Support</p>
                     <p><i class="fas fa-fax"></i> +49 7720 807558 Hauptnummer</p>
                     <p><i class="fas fa-envelope"></i> koyunfood@hotmail.com</p>
                     
