Update hero and about section images and contact info

--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
     <header class="hero" id="home">
         <div class="hero-background">
             <div class="hero-overlay"></div>
-            <div class="hero-image" style="background-image: url('https://images.unsplash.com/photo-1601050690597-df0568f70950?ixlib=rb-1.2.1&auto=format&fit=crop&w=1920&q=80');">
+            <div class="hero-image" style="background-image: url('angebote/blap.jpeg');">
                 <!-- Fallback image in case CSS background doesn't load -->
-                <img src="https://images.unsplash.com/photo-1601050690597-df0568f70950?ixlib=rb-1.2.1&auto=format&fit=crop&w=1920&q=80" alt="KoyunFood Hintergrund" style="display: none;">
+                <img src="angebote/blap.jpeg" alt="KoyunFood Hintergrund" style="display: none;">
             </div>
         </div>
         <div class="container hero-content">
@@ -142,7 +142,7 @@ Heute wird das Unternehmen von der nächsten Generation geführt: Coskun Koyun s
                     </div>
                 </div>
                 <div class="about-image">
-                    <img src="https://images.unsplash.com/photo-1445116572660-236099ec97a0?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=80" alt="Großhandel für türkische Lebensmittel">
+                    <img src="angebote/image.jpeg" alt="KoyunFood Team">
                 </div>
             </div>
         </div>
@@ -156,8 +156,8 @@ Heute wird das Unternehmen von der nächsten Generation geführt: Coskun Koyun s
                 <div class="contact-info">
                     <h3>Ihr Großhandelspartner</h3>
                     <p><i class="fas fa-map-marker-alt"></i> Gartenstraße 3, 78054 Schwenningen</p>
-                    <p><i class="fas fa-phone"></i> +49 1523 7211123  Website Support</p>
-                    <p><i class="fas fa-fax"></i> +49 7720 807558 Hauptnummer</p>
+                    <p><i class="fas fa-phone"></i> +49 1523 7211123  Bestell Support</p>
+                    <p><i class="fas fa-fax"></i> +49 7720 31211 Hauptnummer</p>
                     <p><i class="fas fa-envelope"></i> koyunfood@hotmail.com</p>
                     
                     <h3>Lagerzeiten</h3>
