Update image paths in index.html

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <div class="hero-overlay"></div>
             <div class="hero-image" style="background-image: url('angebote/blap.jpeg');">
                 <!-- Fallback image in case CSS background doesn't load -->
-                <img src="angebote/blap.jpeg" alt="KoyunFood Hintergrund" style="display: none;">
+                <img src="blap.jpeg" alt="KoyunFood Hintergrund" style="display: none;">
             </div>
         </div>
         <div class="container hero-content">
@@ -142,7 +142,7 @@ Heute wird das Unternehmen von der nächsten Generation geführt: Coskun Koyun s
                     </div>
                 </div>
                 <div class="about-image">
-                    <img src="angebote/image.jpeg" alt="KoyunFood Team">
+                    <img src="image.jpeg" alt="KoyunFood Team">
                 </div>
             </div>
         </div>
