Update hero image URL in index.html

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <header class="hero" id="home">
         <div class="hero-background">
             <div class="hero-overlay"></div>
-            <div class="hero-image" style="background-image: url('angebote/blap.jpeg');">
+            <div class="hero-image" style="background-image: url('blap.jpeg');">
                 <!-- Fallback image in case CSS background doesn't load -->
                 <img src="blap.jpeg" alt="KoyunFood Hintergrund" style="display: none;">
             </div>
